--- a/README
+++ b/README
@@ -1,16 +1,6 @@
-Getopt-OO version 0.01
+Getopt-OO version 0.03
 ======================
-
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+$Id: README,v 1.2 2005/01/18 03:41:48 sjs Exp $
 
 INSTALLATION
 
@@ -23,9 +13,7 @@ To install this module type the following:
 
 DEPENDENCIES
 
-This module requires these other modules and libraries:
-
-  blah blah blah
+This module has no special dependencies.
 
 COPYRIGHT AND LICENCE
 
