--- a/README
+++ b/README
@@ -1,6 +1,19 @@
-Getopt-OO version 0.03
+Getopt-OO version 0.04
 ======================
-$Id: README,v 1.2 2005/01/18 03:41:48 sjs Exp $
+$Id: README,v 1.3 2005/01/23 20:41:23 sjs Exp $
+
+Getopt::OO - Perl object oriented version of command line parser 
+that uses a perl hash as template to describe command line 
+options.  The module also alows the developer to associate basic 
+help messages with the options so that the basic usage message 
+and the definition of the command line parsing are tied together.
+The parser handles most common command line parsing. 
+
+The goal of this parser is to provide enough functionality that 
+all the command line parsing can be done by the parser.  When the
+parser has completed its task, the various options and values 
+from the command line are easily accessable to the programmer, 
+and he knows the command line arguments were valid. 
 
 INSTALLATION
 
@@ -13,13 +26,16 @@ To install this module type the following:
 
 DEPENDENCIES
 
-This module has no special dependencies.
+This module has no special dependencies. 
+
+KNOWN PROBLEMS
+POD within this module is not backward compatible with PERL 5.004.
+Otherwise everything should work on all versions from 5.004 through
+5.8.
 
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
-
-Copyright (C) 2004 by Steven Smith.
+Copyright (C) 2005 by Steven Smith.
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.3 or,
